--- a/clint/src/assets/Dashboard/AdminDashboard/AdminDashboard.css
+++ b/clint/src/assets/Dashboard/AdminDashboard/AdminDashboard.css
@@ -1,5 +1,6 @@
 .Container {
     display: flex;
+    width: 100%;
     min-height: 100vh;
     background-color: #f4f4f9;
     font-family: Arial, sans-serif;
