--- a/clint/src/Components/Cart/BookCart.css
+++ b/clint/src/Components/Cart/BookCart.css
@@ -91,3 +91,21 @@
     display: flex;
     gap: 5px;
 }
+
+.checkOutBtn {
+    padding: 10px 20px 10px 20px;
+    border: none;
+    cursor: pointer;
+    background-color: red;
+    color: white;
+    font-weight: 700;
+    border-radius: 5px;
+    margin-left: 1100px;
+    text-decoration: none;
+}
+
+.checkOutLink {
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+}
