--- a/clint/src/Components/SmallComponents/BookDetails/BookDetails.css
+++ b/clint/src/Components/SmallComponents/BookDetails/BookDetails.css
@@ -25,6 +25,7 @@
     width: 100%;
     object-fit: cover;
     border-right: 1px solid #ddd; 
+    cursor: pointer;
 }
 
 .bookDetails {
@@ -37,7 +38,7 @@
 }
 
 .bookName {
-    font-size: 1.2rem; 
+    font-size: 1.1rem; 
     font-weight: 700; 
     color: #333;
 }
@@ -51,6 +52,9 @@
     font-size: 1.1rem; 
     color: #00796b; 
     font-weight: 600; 
+}
+.bookId{
+    display:none;
 }
 
 .buyBtn {
