--- a/clint/src/Components/BookDescription/BookDescription.css
+++ b/clint/src/Components/BookDescription/BookDescription.css
@@ -1,3 +1,12 @@
 .bookDetailsViewBox{
-    margin-top: 80px;
+    margin-top: 100px;
+}
+
+
+@media (max-width: 768px) {
+    .bookDetailsViewBox{
+margin-top: 250px;
+height: 400px;
+width: 100%;
+    }
 }
