--- a/clint/src/Components/SmallComponents/ContactUs/ContactUs.css
+++ b/clint/src/Components/SmallComponents/ContactUs/ContactUs.css
@@ -19,7 +19,6 @@
 
 .ContactUsContainer img:hover {
     transform:  translateX(15px);; 
-    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);  */
 }
 
 .leftSideQueryText{
@@ -30,4 +29,21 @@
 .contactUsText{
     font-size: 2.8rem;
     font-weight: 900;
+}
+
+@media (max-width: 768px) {
+    .ContactUsContainer  {
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       gap: 10px;
+    }
+    .leftSideQueryText{
+        margin-left: 0px;
+
+    }
+    .ContactUsContainer img{
+        margin-right: 0px;
+
+    }
 }
