--- a/clint/src/Components/heading/HeadingBox.css
+++ b/clint/src/Components/heading/HeadingBox.css
@@ -13,7 +13,6 @@
     letter-spacing: 3px;
     font-family: cursive;
     font-weight: 600;
-
 }
 
 .leftSideText .trendingTextLeftSide {
@@ -28,6 +27,7 @@
 
 .headingBox {
     display: flex;
+    flex-wrap: wrap; 
 }
 
 .bookCoverPicture {
@@ -48,7 +48,6 @@
 .bookCoverPicture img:hover {
     box-shadow: -12px 16px 20px rgba(0, 0, 0, 0.7);
     transform: scale(1.01);
-
 }
 
 .bottomLine {
@@ -59,4 +58,49 @@
     margin-left: 355px;
     box-shadow: 0px 10px 10px rgb(0, 0, 0, 0.7);
     border-radius: 0px 0px 50px 50px;
+}
+
+
+@media (max-width: 768px) {
+        .headingBox {
+        justify-content: center;
+        flex-direction: column; 
+        align-items: center; 
+    }
+    .images{
+        margin-left: 0px;
+    }
+    .leftSideText {
+        margin: 20px;
+        text-align: center; 
+    }
+
+    .leftSideText .newText {
+        font-size: 40px; 
+    }
+
+    .leftSideText .trendingTextLeftSide {
+        margin-top: 220px;
+        font-size: 35px; 
+    }
+
+    .leftSideText .exploreText {
+        font-size: 14px;
+    }
+
+    .bookCoverPicture {
+        margin: 20px auto; 
+        height: 250px;
+        width: 180px; 
+    }
+
+    .bookCoverPicture img {
+        height: 300px; 
+        width: 200px; 
+    }
+
+    .bottomLine {
+        width: 100%; 
+        margin-left: 0; 
+    }
 }
