--- a/clint/src/Components/heading/headingHighlights/AuthorHighlightBox.css
+++ b/clint/src/Components/heading/headingHighlights/AuthorHighlightBox.css
@@ -60,3 +60,10 @@
     box-shadow: -12px 16px 20px rgba(0, 0, 0, 0.7);
     transform: scale(1.02);
 }
+
+
+@media (max-width: 768px) {
+.highlightBox{
+    margin-left: 0px;
+}
+}
