--- a/clint/src/Pages/TextBookPage/TextBook.css
+++ b/clint/src/Pages/TextBookPage/TextBook.css
@@ -1,4 +1,3 @@
-/* General Container */
 .TextBookViewContainer {
     max-width: 1200px;
     margin: 0 auto;
@@ -102,5 +101,11 @@ width: 50px;
 
     .searchBar input {
         width: 100%;
+    }
+    .TextBookViewContainer{
+        margin-top: 180px;
+    }
+    .searchBar input {
+        width: 250px;
     }
 }
