--- a/clint/src/Components/Register/ResetPassword.css
+++ b/clint/src/Components/Register/ResetPassword.css
@@ -1,4 +1,4 @@
-/* Container that centers the form */
+
 .container {
     display: flex;
     justify-content: center;
@@ -6,8 +6,7 @@
     min-height: 100vh;
     background-color: #f7f7f7;
   }
-  
-  /* Styling for the form container */
+
   .formBox {
     background-color: #ffffff;
     padding: 40px;
@@ -20,7 +19,6 @@
     flex-direction: column;
   }
   
-  /* Heading styling */
   .formBox h2 {
     margin-bottom: 20px;
     color: #333;
@@ -38,14 +36,13 @@
     transition: border-color 0.3s ease;
   }
   
-  /* Focus effect for inputs */
   .emailArea input:focus {
     outline: none;
     border-color: #66afe9;
     box-shadow: 0 0 5px rgba(66, 148, 255, 0.5);
   }
   
-  /* Submit button styling */
+
   .submitBtn {
     background-color: #ff0000ce;
     color: white;
@@ -60,31 +57,29 @@
     transition: background-color 0.3s ease, box-shadow 0.3s ease-in-out;
   }
   
-  /* Button hover effect */
+
   .submitBtn:hover {
     background-color: #b30000;
     color: #ffffff;
     box-shadow: 0 7px 10px #bbb5b5;
   }
   
-  /* Success and error messages */
   .successMessage {
-    color: #30d056;
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 10px;
+    color: #2ecc71;
+    background-color: #eafaf1;
+    padding: 10px;
+    border-left: 4px solid #2ecc71;
+    border-radius: 5px;
   }
   
   .errorMessage {
     color: #dc3545;
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 10px;
+    background-color: #faeaea;
+    padding: 10px;
+    border-left: 4px solid #dc5151;
+    border-radius: 5px;
   }
   
-  /* Label styling */
   .emailArea label {
     display: block;
     text-align: left;
@@ -92,9 +87,14 @@
     font-weight: bold;
     color: #555;
   }
+  .resentOtpBtn{
+    cursor: pointer;
+  }
+  .resentOtpBtn:hover{
+color: #2ecc71;
+  }
   
-  /* Responsive design for smaller screens */
-  @media (max-width: 500px) {
+  @media (max-width: 768px) {
     .formBox {
       padding: 20px;
     }
