--- a/clint/src/Components/AdminDashBoardComponent/ManageUsers/ManageUsers.css
+++ b/clint/src/Components/AdminDashBoardComponent/ManageUsers/ManageUsers.css
@@ -97,9 +97,10 @@
 }
 .addUser form{
     display: flex;
-    align-items: center;
+    flex-direction: column;
     gap:15px
 }
+
 .addUser label{
     font-weight: 600;
 }
@@ -124,7 +125,7 @@
 }
 
 .buttonContainer {
-    margin-top: 10px; /* Add space between buttons and form */
+    margin-top: 10px; 
 }
 
 .success {
@@ -143,7 +144,8 @@
 
 .editUser form{
     display: flex;
-    align-items: center;
+    flex-direction: column;
+justify-content: center;
     gap:15px
 }
 .editUser label{
@@ -153,3 +155,28 @@
     border: 1px solid black;
     border-radius: 5px;
 }
+
+.line{
+    height: 5px;
+    width: 100%;
+    background-color: #e0e0e0;
+    margin-top: 20px;
+}
+
+.submitButton{
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 0px 10px 0px;
+    font-weight: 700;
+    font-size: 1rem;
+    border: none;
+    width: 200px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+
+.submitButton:hover {
+    background-color: #45a049;
+}
+
