--- a/clint/src/Components/Login/Login.css
+++ b/clint/src/Components/Login/Login.css
@@ -94,19 +94,19 @@
 
   .successMessage {
     color: #30d056; 
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 10px;
+    background-color: #eafaf1;
+    padding: 10px;
+    border-left: 4px solid #2ecc71;
+    border-radius: 5px;
   }
   
 
   .errorMessage {
-    color: #dc3545; 
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 10px;
+    color: #dc3545;
+    background-color: #faeaea;
+    padding: 10px;
+    border-left: 4px solid #dc5151;
+    border-radius: 5px;
   }
   
   /* Responsive design for smaller screens */
