created a user profile page with some details

--- a/clint/src/Components/AdminDashBoardComponent/ManageBooks/ManageBooks.css
+++ b/clint/src/Components/AdminDashBoardComponent/ManageBooks/ManageBooks.css
@@ -50,6 +50,8 @@
 .tableCell {
     padding: 10px;
     border-bottom: 1px solid #ddd;
+    width: 200px;
+    word-wrap:break-word;
 }
 
 .actionCell {
