--- a/clint/src/Components/AdminDashBoardComponent/ManageContactUsQueries/ManageContactUsQueries.css
+++ b/clint/src/Components/AdminDashBoardComponent/ManageContactUsQueries/ManageContactUsQueries.css
@@ -83,6 +83,7 @@ button:hover {
 }
 
 .tableContainer{
+    width: 100%;
     max-height: 500px;
     overflow-y: auto;
 }
@@ -94,4 +95,9 @@ button:hover {
 
 .tableRow:hover {
     background-color: #f1f1f1;
+}
+.userNameCell, .userEmailCell, .messageCell {
+    max-width: 200px; 
+    word-wrap:break-word;
+    white-space: normal;
 }
