added resend otp option on reset password

--- a/clint/src/Components/BookDescription/BookDescription.css
+++ b/clint/src/Components/BookDescription/BookDescription.css
@@ -1,8 +1,7 @@
-.bookDetailsViewBox{
-    margin-top: 100px;
+
+.container{
+margin-top: 30px;
 }
-
-
 @media (max-width: 768px) {
     .bookDetailsViewBox{
 margin-top: 250px;
