--- a/clint/src/Pages/AdminDashboardPage/AdminDashboard.css
+++ b/clint/src/Pages/AdminDashboardPage/AdminDashboard.css
@@ -6,7 +6,8 @@
     font-family: Arial, sans-serif;
 }
 
-.sidebarAdmin {
+.sidebar {
+    height: auto;
     min-width: 250px;
     background-color: #fd962f;
     color: white;
@@ -17,7 +18,7 @@
     border-radius: 10px;
 }
 
-.sidebarAdmin h2 {
+.sidebar h2 {
     margin-top: 10px;
 }
 .authorizedFunction{
